different page linked with their corresponding navigation element item. Everything fine!!!

--- a/pages/style.css
+++ b/pages/style.css
@@ -19,6 +19,11 @@
 
 #main-heading h1 {
     font-size:              11vh;
+    text-shadow: 
+        1vw 1vw 0 rgba(255, 255, 0, 1),  /* Top-left shadow (outline) */
+        -1vw 1vw 0 rgba(255, 255, 0, 1), /* Bottom-left shadow (outline) */
+        1vw -1vw 0 rgba(255, 255, 0, 1), /* Top-right shadow (outline) */
+        -1vw -1vw 0 rgba(255, 255, 0, 1); /* Bottom-right shadow (outline) */
 }
 
 body {
@@ -37,17 +42,21 @@ body {
     height:                 60vh;
     display:                flex;    
     flex-direction:         row;
-    gap:                    1.5vw;
+    gap:                    1vw;
     margin-top:             7vh;
-    margin-left:            2vh;
+    margin-left:            2vh;      
+    position:               relative; 
+    /* background:            lightblue;
+    opacity:                0.5;                                */
 }
 
 #navigation_icons {
-    width:                  3vh;
+    width:                  3vw;
     display:                flex;
     flex-direction:         column;
     gap:                    3vh;    
     align-items:            center;                            /* This Gap should sync with gap of navigation_texts */
+    z-index:                1;                                 /* So that hover effect can be applied */
 }
 
 #navigation_icons .icon_box {
@@ -60,9 +69,11 @@ body {
 }
 
 #navigation_icons .icon {
-    width:                  6vh;
-    height:                 6vh;
-    fill:                   #f0f0f0;
+    width:                  5vh;
+    height:                 5vh;
+    filter:                 drop-shadow(0 0 0 rgba(255, 255, 255, 1));
+    transition:             filter 0.1s ease;
+    /* box-shadow:             inset 0 0 20px 10px rgba(255, 0, 0, 0.7);    */
 }
 
 #navigation_texts {
@@ -71,8 +82,12 @@ body {
     display:                flex;
     flex-direction:         column;
     font-size:              4.5vh;
-    gap:                    3vh;                                /* This Gap should sync with gap of navigation_icons */
-    visibility:             visible;
+    gap:                    3vh;       
+    /* background-color:       lightgreen; */
+    opacity:                0;                               /* this should be removed */
+    transform:              translateX(-10vw);
+    transition:             transform 0.3s ease-out,
+                            opacitiy 1s ease;
 }
 
 #navigation_texts .text_box {
@@ -81,16 +96,36 @@ body {
     color:                  #f0f0f0;
     justify-content:        center;
     height:                 5vh;     
-    gap:                    0px;                           /* This height should sync with height of navigation_icons .icon_box */
+    gap:                    0px;   
 }
 
 #navigation_text .text_box p {
     height:                 5vh;
-    justify-content:        center;
+    justify-content:        center; 
 }
 
-/* #navigation_icons:hover + #navigation_texts {
-    visibility:             visible;
-} */
+.text_box a {
+    text-decoration:        none;
+    color:                  #ffffff;
+}
 
-/* END NAVIGATION PANEL STYLE */
+#navigation_icons:hover + #navigation_texts{
+    opacity:                1;
+    transform:              translateX(0vw);
+    pointer-events:         auto;
+}
+
+#navigation_texts:hover {
+    opacity:                1;
+    transform:              translateX(0vw);
+    pointer-events:         auto;
+}
+
+#navigation_panel .text_box:hover {
+    filter:                 drop-shadow(0 0 .75vw rgba(255, 255, 255, 0.518));
+}
+
+#navigation_icons .icon:hover {
+    filter:                 drop-shadow(0 0 .75vw rgba(255, 255, 255, .5));
+}
+/* END NAVIGATION PANEL STYLING */
